# graduation_project

./: .gitignore  README.md  pyproject.toml
api_resource/: api_methods.py
api_resource/Schemas/: schema_for_api_requests.py  schemas_for_api_response.py
components/: acquiring_page.py  credit_form.py  credit_page.py  credit_user.py  footer.py  header.py  main_menu.py  middel.py
methods_page_objects/: ui_methods.py
tests/: conftest.py  test_api.py  test_ui.py
tests/utils/: attach.py
